Remove remaining --progress flags from container LFS fetch
The first fix (PR #99) only removed --progress from model download
LFS fetch calls. The container pull step also used --progress in
git lfs fetch, causing the same failure on older git-lfs versions.

--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -252,7 +252,7 @@ jobs:
           while true; do
             echo "LFS pull attempt ${attempt}/${max_attempts}..."
             echo "Downloading container files (this may take a while for large files)..."
-            if git -C "$LFS_DIR" lfs fetch --progress; then
+            if git -C "$LFS_DIR" lfs fetch; then
               break
             fi
             if [[ $attempt -ge $max_attempts ]]; then
