--- a/yamls/emed.yaml
+++ b/yamls/emed.yaml
@@ -836,11 +836,11 @@ jobs:
             type: dropdown
             label: Select Cluster
             optional: true
-            default: '-M hpc4'
+            default: 'hpc4'
             options:
               - value: ''
                 label: Default
-              - value: '-M hpc4'
+              - value: 'hpc4'
                 label: HPC4
           is_disabled:
             type: boolean
@@ -850,7 +850,7 @@ jobs:
           partition_default:
             type: slurm-partitions
             label: SLURM partition
-            ignore: ${{ '-M hpc4' == inputs.slurm.slurm_options }}
+            ignore: ${{ 'hpc4' == inputs.slurm.slurm_options }}
             hidden: ${{ .ignore }}
             optional: true
             resource: ${{ inputs.resource }}
@@ -860,7 +860,7 @@ jobs:
             label: SLURM partition
             optional: true
             tooltip: Select a partition from the drop down menu. Leave empty to let SLURM pick a partition.
-            ignore: ${{ '-M hpc4' != inputs.slurm.slurm_options }}
+            ignore: ${{ 'hpc4' != inputs.slurm.slurm_options }}
             hidden: ${{ .ignore }}
             default: gpu-h200
             options:
